@@ -54,4 +54,5 @@
 * Renamed :before/after_validate callback to :before/after_validation to match ActiveRecord
 * Callbacks#add now accepts a Symbol which maps a callback to a method call on the targetted instance, also added a spec to verify this behavior
 * Documented callbacks.rb
-* Added Associations::Reference class
+* Added DataMapper::Associations::Reference class
+* Documented DataMapper::Associations::Reference class
